<resources>
    <string name="app_name">Car2021-Example</string>
    <string name="deviceid">设备ID</string>
    <string name="loginname">用户名</string>

    <string name="sp_data">90</string>
    <string name="mp_data">100</string>
    <string name="line_data">50</string>
    <string name="line_disc">循迹速度:</string>
    <string name="coded_disc">码盘</string>
    <string name="angle_disc">转弯速度:</string>
    <string name="main_status">接收主车状态</string>
    <string name="follow_status">接收从车状态</string>
    <string name="main_control">控制主车</string>
    <string name="follow_control">控制从车</string>
    <string name="clear_coded_disc">清除码盘</string>
    <string name="auto_drive">自动驾驶</string>

    <string name="digital_title">显示数据行:</string>
    <string name="voicetext">播报的文本:</string>
    <string name="voiceText">百科荣创（北京）科技发展有限公司</string>

    <string name="use_socket">无线通信</string>
    <string name="full_auto">自动驾驶</string>

    <!--设备id和用户名-->
    <string name="devicetext">BKRC-001</string>
    <string name="logintext">BKRC-2021</string>
    <string name="loginpsd">密码不超过16个字符，可直接点击登录！</string>
    <!--左侧导航栏-->
    <!--ZigBee-->

</resources>
